src/github.com/ebay/beam/query/parser/testdata/select/errors/no_vars.res
Query:
SELECT {
?a ?b ?c
}

Parsed:
Error: unable to parse query: line 1 column 8: expected ?
